@@ -20,6 +20,7 @@
         * include/Rcpp/sugar/functions/mapply/mapply_3.h: more flexible
         * include/Rcpp/vector/Vector.h: More efficient assign_object, which is 
         used in the assignment operator
+        * include/Rcpp/sugar/functions/clip.h: added clip function
 
 2012-11-20  JJ Allaire <jj@rstudio.org>
 
